# b2bWagtail

./: build.sh  pyproject.toml
cms/: db.sqlite3
cms/blog/: models.py
cms/blog/migrations/: 0001_initial.py  0002_blogpage.py
cms/cms/: api.py  urls.py  wsgi.py
cms/cms/settings/: base.py  dev.py  production.py
cms/home/: models.py
cms/home/migrations/: 0003_homepage_body.py  0004_paquete_gallerycarousel_excluidoitempaquete.py
